# fallenskies

./: .env.sample  Cargo.toml  README.md
migrations/: 20201203160852_base_account.sql
src/: main.rs
src/fs/: mod.rs  model.rs  routes.rs
static/templates/: banner_with_login.hbs  dummy_footer.hbs  dummy_header.hbs  game_port.hbs  main.hbs  registration.hbs
